--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,7 +1,7 @@
 ---
 name: Integration/Regression
 
-on:
+on:               # yamllint disable-line rule:truthy
   workflow_call:
     inputs:
       crs-config:
@@ -25,8 +25,8 @@ jobs:
           wget https://github.com/coreruleset/coreruleset/archive/refs/tags/nightly.tar.gz -O /tmp/nightly.tar.gz
           tar -zxvf /tmp/nightly.tar.gz -C /tmp/
           curl -skLo - https://github.com/coreruleset/go-ftw/releases/latest/download/ftw_Linux_x86_64.tar.gz | tar -xzf - ftw
-      
-      - name: "Start ${{ matrix.server }} "
+ 
+      - name: "Running integration tests for ${{ matrix.server }}"
         run: |
           touch plugins/placeholder-config.conf
           touch plugins/placeholder-before.conf
@@ -37,13 +37,13 @@ jobs:
           echo '${{ inputs.crs_config }}' > /tmp/crs-setup.conf
           docker-compose -f tests/integration/docker-compose.yml up -d ${{ matrix.server }}-nightly
 
-      - name: "Run plugin tests"
+      - name: "Runing regression tests for ${{ matrix.server }}"
         run: |
           ./ftw check -d tests/regression/tests
           ./ftw run -d tests/regression/tests
         env:
           FTW_LOGFILE: './tests/logs/{{ matrix.server }}/error.log'
-      
+
       - name: "Tear down tests"
         run: |
           docker-compose -f tests/integration/docker-compose.yml down
