--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,7 +1,7 @@
 ---
 name: Lint Plugin
 
-on:
+on:               # yamllint disable-line rule:truthy
   workflow_call:
 
 
@@ -20,7 +20,18 @@ jobs:
         with:
           format: github
           file_or_dir: tests/regression/tests
-          config_file: .yamllint.yml
+          config_data: |
+            extends: default
+            rules:
+              line-length: 1024
+              new-line-at-end-of-file:
+                level: warning
+              trailing-spaces:
+                level: warning
+              indentation: disable
+              comments:
+                require-starting-space: true # default
+                min-spaces-from-content: 1
 
       - name: Linelint
         uses: fernandrone/linelint@master
