fix(ci): correct matrix.server variable in ftw_logfile env var
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -44,7 +44,7 @@ jobs:
           ./ftw check -d tests/regression
           ./ftw run -d tests/regression
         env:
-          FTW_LOGFILE: './tests/logs/{{ matrix.server }}/error.log'
+          FTW_LOGFILE: './tests/logs/${{ matrix.server }}/error.log'
       - name: "Tear down tests"
         run: |
           docker-compose -f tests/docker-compose.yml down
