fix(ci): use parent directory
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: ibiqlik/action-yamllint@v3
         with:
           format: github
-          file_or_dir: tests/regression/tests
+          file_or_dir: tests/regression
           config_data: |
             extends: default
             rules:
