--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -5,7 +5,7 @@ on:
   workflow_call:
     inputs:
       crs-config:
-        required: true
+        required: false
         type: string
 
 jobs:
