--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,7 +1,7 @@
 ---
 name: Integration/Regression
 
-on:
+on:                   # yamllint disable-line rule:truthy
   workflow_call:
     inputs:
       crs-config:
