--- a/tests/integration/docker-compose.yml
+++ b/tests/integration/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       PORT: "80"
       MODSEC_RULE_ENGINE: "DetectionOnly"
       BLOCKING_PARANOIA: 4
-      TZ: "${TZ}"
       ERRORLOG: "/var/log/error.log"
       ACCESSLOG: "/var/log/access.log"
       MODSEC_AUDIT_LOG_FORMAT: Native
@@ -27,10 +26,9 @@ services:
       - 80:80
     volumes:
       - ../../crs/rules:/opt/owasp-crs/rules:ro
+      - ./plugins:/etc/modsecurity.d/plugins:ro
       - ./tests/logs/apache:/var/log:rw
-      - ./tests/integration/modsec-setup.conf:/etc/modsecurity.d/setup.conf:ro
-      - ./plugins:/etc/modsecurity.d/plugins
-    #entrypoint: ["/bin/sh", "-c", "/bin/cp /etc/modsecurity.d/owasp-crs/crs-setup.conf.example /etc/modsecurity.d/owasp-crs/crs-setup.conf && /docker-entrypoint.sh && apachectl -D FOREGROUND"]
+      - ./tests/integration/modsec-setup.conf:/etc/modsecurity.d/setup2.conf:ro
     networks:
       - crs-plugins-net
   
@@ -45,7 +43,6 @@ services:
       PORT: "80"
       MODSEC_RULE_ENGINE: DetectionOnly
       BLOCKING_PARANOIA: 4
-      TZ: "${TZ}"
       ERRORLOG: "/var/log/nginx/error.log"
       LOGLEVEL: "debug"
       ACCESSLOG: "/var/log/nginx/access.log"
