--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -10,6 +10,7 @@ on:                   # yamllint disable-line rule:truthy
 
 env:
   go_ftw_version: "v0.4.3"
+
 jobs:
   modsecurity-test:
     runs-on: ubuntu-latest
@@ -21,9 +22,11 @@ jobs:
 
     steps:
       - name: "Checkout repo"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: "Install dependencies"
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           mkdir -p crs
           mkdir -p tests/integration
