--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -44,6 +44,7 @@ jobs:
         run: |
           # create logs directory
           mkdir -p tests/logs/${{ matrix.server }}
+          chmod a+rw tests/logs/${{ matrix.server }}
           # use crs-config, if any
           echo "$EXTRA_CONF" > /tmp/crs-additional-setup.conf
           # start container
