feat: improve test setup
- Override crs-setup.conf in compose file, like we do for core, to
  ensure that we're using the correct configuration. Previously, the
  rules would be picked up (CRS v4) but the configuration wouldn't be
  correct (CRS v3.3.5), which had the effect, that the paranoia level
  setting was not applied and that test were only being run against
  paranoia level 1.
- Show line number for syntax failures.
- Force compose shutdown on GH.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -48,4 +48,4 @@ jobs:
         run: |
           pip install --upgrade setuptools
           pip install secrules-parsing
-          secrules-parser -c --output-type github -f plugins/*.conf
+          secrules-parser -c -v --output-type github -f plugins/*.conf
