--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -55,7 +55,6 @@ jobs:
 
       - name: "Run plugin tests"
         run: |
-          ls -l "${FTW_LOGFILE}"
           ./ftw check -d tests/regression
           ./ftw run -d tests/regression
         env:
@@ -63,4 +62,4 @@ jobs:
       
       - name: "Tear down tests"
         run: |
-          docker-compose -f tests/integration/docker-compose.yml down
+          docker-compose -f tests/integration/docker-compose.yml down -t 0
