--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -59,8 +59,8 @@ jobs:
 
       - name: "Run plugin tests"
         run: |
-          ./ftw check -d tests/regression/tests
-          ./ftw run -d tests/regression/tests --show-failures-only
+          ./ftw check -d tests/regression
+          ./ftw run -d tests/regression --show-failures-only
         env:
           FTW_LOGFILE: 'tests/logs/${{ matrix.backend }}/error.log'
       
