fix: extend renovate docker files match
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>coreruleset/renovate-config"
-  ]
+  ],
+  "docker": {
+    "fileMatch": ["^tests/integration/docker-compose.\\.yml$"]
+  }
 }
