fix: renovate config
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/renovate.json
+++ b/renovate.json
@@ -3,14 +3,7 @@
   "extends": [
     "local>coreruleset/renovate-config"
   ],
-  "packageRules": [
-    {
-      "matchCategories": [
-        "docker"
-      ],
-      "fileMatch": [
-        "^tests/integration/docker-compose.\\.yml$"
-      ]
-    }
-  ]
+  "docker-compose": {
+    "fileMatch": ["^tests/integration/docker-compose.\\.yml$"]
+  }
 }
