fix!: update go-ftw release
Signed-off-by: Felipe Zipitria <felipe.zipitria@owasp.org>

--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>coreruleset/renovate-config"
+    "github>coreruleset/renovate-config",
+    "customManagers:githubActionsVersions",
+    "schedule:weekly"
   ],
+  "ignorePaths": [],
   "docker-compose": {
-    "managerFilePatterns": [
-      "/^tests/integration/docker-compose.\\.yml$/"
-    ]
+      "enabled": true, 
+      "managerFilePatterns": ["/^tests\/integration\/docker-compose.\\.yml$/"]
   }
 }
